<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="@string/settingBtnClick"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/idLabel"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:background="@drawable/frame" />

            <TextView
                android:id="@+id/moneyLabel"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:background="@drawable/frame" />

            <Button
                android:id="@+id/settingButtom"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:onClick="@string/settingBtnClick"
                android:text="@string/setting" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/levelExp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2" >

        <TextView
            android:id="@+id/levelText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" />

        <com.app.mountainhouse.MyProgress
            android:id="@+id/levelExpBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="100" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/levelExp"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/newsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/newsBtnClick"
            android:text="@string/newsBtn" />

        <Button
            android:id="@+id/infoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/infoBtnClick"
            android:text="@string/infoBtn" />

        <Button
            android:id="@+id/friendListBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/friendListBtnClick"
            android:text="@string/friendListBtn" />

        <Button
            android:id="@+id/itemBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/itemBtnClick"
            android:text="@string/itemBtn" />

        <Button
            android:id="@+id/stageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/stageBtnClick"
            android:text="@string/stageBtn" />

        <Button
            android:id="@+id/shoppingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/shoppingBtnClick"
            android:text="@string/shoppingBtn" />

    </LinearLayout>

    <Button
        android:id="@+id/startGameBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/startGameBtn" />

    <LinearLayout
        android:id="@+id/lobby_main_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startGameBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout3"
        android:orientation="vertical" >

    </LinearLayout>

</RelativeLayout>